--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "react-bootstrap": "^1.0.1"
+    "react-bootstrap": "^1.0.1",
+    "react-router-dom": "^5.2.0"
   }
 }
