--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-player": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "use-react-router": "^1.0.7",
     "video-react": "^0.14.1"
   }
 }
