--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "video.js": "^7.7.6"
   },
   "dependencies": {
+    "@bearer/node-agent": "^3.1.2",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
