--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.15",
+    "node": "^14.3.0",
     "object-assign": "^4.1.1",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
