--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "firebase": "^7.16.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.15",
     "node": "^14.3.0",
