--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "use-react-router": "^1.0.7",
+    "vercel": "^19.2.0",
     "video-react": "^0.14.1"
   }
 }
